# myco

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  Trunk.toml  build.rs
.claude/skills/publish/: SKILL.md
.claude/skills/session-review/: SKILL.md
.github/: publish-request.json  release-notes-v0.2.0.md  release-notes-v0.3.0.md
.github/actions/cache-hf-hub/: action.yml
.github/workflows/: ci.yml  publish.yml
crates/myco-gui/: Cargo.toml  Trunk.toml  index.html
crates/myco-gui/src/: api.rs  main.rs
docs/: compaction.md  myco-gui.md
scripts/: install-pre-commit-hooks.sh  pre-commit  seed-minilm-weights.sh
src/: external_command.rs  interaction.rs  lib.rs  session_browser.rs
src/application/: mod.rs
src/config/: file.rs  mod.rs  setup.rs
src/core/: image.rs  mod.rs
src/generative_model/: anthropic.rs  driver_core.rs  mod.rs  openai_responses.rs  sse_parser.rs
src/harness/: config.rs  mod.rs  preflight.rs  ssh.rs  subagent_service.rs
src/host/: host_controller.rs  host_worker.rs  mod.rs  protocol.rs
src/manual/: mod.rs
src/manual/articles/: cli.md  harness-ops.md  overview.md
src/prompts/: mod.rs
src/prompts/fragments/: coding-norms.md  computer-use.md  memory.md  soul.md  user-authority.md  workspace.md  worktrees.md
src/repl/: mod.rs
src/server/: mod.rs  routes.rs  state.rs  wire.rs
src/session/: agent.rs  attach.rs  compact.rs  console_log.rs  markdown.rs  mod.rs  search.rs  transcript.rs
src/session/markdown/: links.rs  mod.rs  tables.rs
src/text_search/: discover.rs  embed_model.rs  engine.rs  index.rs  mod.rs
src/text_search/embed_weights/: MODEL.manifest  README.md
src/tool_services/: ask_user_service.rs  bash_service.rs  browser_service.rs  list_recent_service.rs  manual_service.rs  memory_service.rs  meta_tool_service.rs  mod.rs  session_history_service.rs  text_editor_service.rs  text_search_tool_service.rs
src/tool_services/bash_service/: mod.rs  tests.rs
src/tui/: mod.rs
tests/: bash_session_integration.rs  cancel_composed.rs  cli_pipe_drive.rs  concurrent_host_tools.rs  console_log_integration.rs  host_cancel_desync.rs  integration_test.rs
tests/generative_model_tests/: anthropic.rs  mod.rs  openai_responses.rs
tests/test_tools/: letter_counter_tool.rs  mod.rs
tests/test_utils/: mod.rs  scripted_model.rs  transcript.rs
