[package]
name = "myco"
version = "0.1.0"
edition = "2024"
description = "Multi-host coding agent CLI (local in-process + SSH remotes)"
repository = "https://github.com/tsnl/myco"
homepage = "https://github.com/tsnl/myco"
readme = "README.md"
keywords = ["agent", "cli", "ssh", "coding"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"


[dependencies]
async-trait = "0.1"
atomic-write-file = "0.3.0"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.2", features = ["derive"] }
dirs = "6"
dotenvy = "0.15.7"
futures = "0.3.32"
regex = "1.12.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
rocket = "0.5.1"
rustyline = "15"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
toml = "0.8"
tokio = { version = "1.52.3", features = ["full"] }
url = "2"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
notify = "8.2.0"
tantivy = "0.22"
