[package]
name = "myco"
version = "0.3.0"
edition = "2024"
description = "Multi-host coding agent CLI (local in-process + SSH remotes)"
repository = "https://github.com/tsnl/myco"
homepage = "https://github.com/tsnl/myco"
readme = "README.md"
keywords = ["agent", "cli", "ssh", "coding"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"


[dependencies]
atomic-write-file = "0.3.0"
base64 = "0.22"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.2", features = ["derive"] }
dirs = "6"
dotenvy = "0.15.7"
futures = "0.3.32"
libc = "0.2"
# rustls (webpki-roots) instead of the default native-tls backend so runtime
# TLS is statically linked: platform-matched release binaries then carry no
# dynamic dependency on the target host's system OpenSSL (see cargo-dist plan).
# default-features=false drops `default-tls`; the other reqwest defaults
# (charset, http2, system-proxy) are re-added so only the TLS backend changes.
# `rustls-tls` bundles Mozilla's CA set in-binary (webpki-roots) — no system
# trust store needed on minimal remotes. Swap to "rustls-tls-native-roots" if a
# host must trust a custom/corporate CA from its OS trust store instead.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "charset", "http2", "system-proxy", "rustls-tls"] }
rustyline = "15"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
toml = "0.8"
tokio = { version = "1.52.3", features = ["full"] }
url = "2"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
notify = "8.2.0"
tantivy = "0.22"
ssh2-config = "0.7.1"
unicode-width = "0.2"

[target.'cfg(unix)'.dependencies]
# Terminal width detection (TIOCGWINSZ) for `--wrap auto`.
libc = "0.2"

[build-dependencies]
# Sync Hub client (ureq + native-tls); shares ~/.cache/huggingface with Python huggingface_hub.
hf-hub = { version = "0.4", default-features = false, features = ["native-tls", "ureq"] }
