[package]
name = "myco-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.23", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = ["EventSource", "MessageEvent", "Window", "Document", "Element", "HtmlSelectElement", "HtmlTextAreaElement"]
